# hybrid-quantum

./: .gitignore  CMakeLists.txt  README.md  ruff.toml
frontend/: CMakeLists.txt
frontend/qasm/: qasm-import.py  qasmtoqillr.py  qasmtoquantum.py
include/quantum-mlir-c/Dialect/: QILLR.h  QPU.h  Quantum.h
include/quantum-mlir/Conversion/: Passes.h  Passes.td
include/quantum-mlir/Dialect/Quantum/: CMakeLists.txt
include/quantum-mlir/Dialect/Quantum/Analysis/: RegisterRangesAnalysis.h
include/quantum-mlir/Dialect/Quantum/IR/: QuantumOps.h  QuantumOps.td  QuantumTypes.td
include/quantum-mlir/Dialect/Quantum/Interfaces/: CMakeLists.txt  InferRegisterRangesInterface.h  InferRegisterRangesInterface.td
include/quantum-mlir/Dialect/Quantum/Transforms/: Passes.h  Passes.td
lib/Bindings/Python/: DialectQILLR.cpp  DialectQPU.cpp  DialectQuantum.cpp
lib/CAPI/Dialect/: CMakeLists.txt
lib/CAPI/Dialect/QILLR/: QILLR.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/QILLRToLLVM/: QILLRToLLVM.cpp
lib/Conversion/QILLRToQuantum/: CMakeLists.txt  QILLRToQuantum.cpp
lib/Conversion/QuantumToQILLR/: CMakeLists.txt  QuantumToQILLR.cpp
lib/Conversion/RVSDGConversion/: CMakeLists.txt  RVSDGConversion.cpp
lib/Conversion/RVSDGToScf/: CMakeLists.txt  RVSDGToScf.cpp
lib/Conversion/ScfToRVSDG/: ScfToRVSDG.cpp
lib/Dialect/: CMakeLists.txt
python/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/python/: lit.local.cfg
test/quantum-opt/: quantum-opt.mlir
tools/quantum-opt/: CMakeLists.txt  quantum-opt.cpp
unittest/: CMakeLists.txt
(+111 files in other folders)
